k8s/kustomization/bases/keycloak/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      restartPolicy: Always
      containers:
        - name: keycloak
          image: starter/keycloak
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "500m"
              memory: "800Mi"
