k8s/kustomization/bases/keycloak/keycloak-ingress-web.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingress-web
  namespace: starter
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`keycloak.local.starter.com`)
      priority: 10
      services:
        - name: keycloak-service
          port: 80
      middlewares:
        - name: https-redirect
